[tool.poetry]
name = "librarymanagement"
version = "0.1.0"
description = "A school library management system"
authors = ["Rishabh Kumar Sajwal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
pydantic = "^2.7.1"
cryptography = "^42.0.7"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
